use plain js data structures for HttpApi properties
