# packages/platform-node/test/fixtures/openapi.json
@@ -5,6 +5,171 @@
     "version": "0.0.1"
   },
   "paths": {
+    "/groups/{id}": {
+      "get": {
+        "tags": ["groups"],
+        "operationId": "groups.findById",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "schema": {
+              "$ref": "#/components/schemas/NumberFromString"
+            },
+            "required": true
+          }
+        ],
+        "security": [],
+        "responses": {
+          "200": {
+            "description": "an instance of Group",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Group"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "The request did not match the expected schema",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HttpApiDecodeError"
+                }
+              }
+            }
+          },
+          "413": {
+            "description": "an instance of GlobalError",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GlobalError"
+                }
+              }
+            }
+          },
+          "418": {
+            "description": "an instance of GroupError"
+          }
+        }
+      }
+    },
+    "/groups": {
+      "post": {
+        "tags": ["groups"],
+        "operationId": "groups.create",
+        "parameters": [],
+        "security": [],
+        "responses": {
+          "200": {
+            "description": "an instance of Group",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Group"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "The request did not match the expected schema",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HttpApiDecodeError"
+                }
+              }
+            }
+          },
+          "413": {
+            "description": "an instance of GlobalError",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GlobalError"
+                }
+              }
+            }
+          },
+          "418": {
+            "description": "an instance of GroupError"
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": ["name"],
+                "properties": {
+                  "name": {
+                    "type": "string"
+                  }
+                },
+                "additionalProperties": false
+              }
+            }
+          },
+          "required": true
+        }
+      }
+    },
+    "/users/{id}": {
+      "get": {
+        "tags": ["Users API"],
+        "operationId": "users.findById",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "schema": {
+              "$ref": "#/components/schemas/NumberFromString"
+            },
+            "required": true
+          }
+        ],
+        "security": [
+          {
+            "cookie": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "an instance of User",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/User"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "The request did not match the expected schema",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HttpApiDecodeError"
+                }
+              }
+            }
+          },
+          "413": {
+            "description": "an instance of GlobalError",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GlobalError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/users": {
       "post": {
         "tags": ["Users API"],
@@ -225,186 +390,21 @@
           "required": true
         }
       }
-    },
-    "/users/{id}": {
-      "get": {
-        "tags": ["Users API"],
-        "operationId": "users.findById",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "schema": {
-              "$ref": "#/components/schemas/NumberFromString"
-            },
-            "required": true
-          }
-        ],
-        "security": [
-          {
-            "cookie": []
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "an instance of User",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/User"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "The request did not match the expected schema",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/HttpApiDecodeError"
-                }
-              }
-            }
-          },
-          "413": {
-            "description": "an instance of GlobalError",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/GlobalError"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/groups": {
-      "post": {
-        "tags": ["groups"],
-        "operationId": "groups.create",
-        "parameters": [],
-        "security": [],
-        "responses": {
-          "200": {
-            "description": "an instance of Group",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Group"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "The request did not match the expected schema",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/HttpApiDecodeError"
-                }
-              }
-            }
-          },
-          "413": {
-            "description": "an instance of GlobalError",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/GlobalError"
-                }
-              }
-            }
-          },
-          "418": {
-            "description": "an instance of GroupError"
-          }
-        },
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "required": ["name"],
-                "properties": {
-                  "name": {
-                    "type": "string"
-                  }
-                },
-                "additionalProperties": false
-              }
-            }
-          },
-          "required": true
-        }
-      }
-    },
-    "/groups/{id}": {
-      "get": {
-        "tags": ["groups"],
-        "operationId": "groups.findById",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "schema": {
-              "$ref": "#/components/schemas/NumberFromString"
-            },
-            "required": true
-          }
-        ],
-        "security": [],
-        "responses": {
-          "200": {
-            "description": "an instance of Group",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Group"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "The request did not match the expected schema",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/HttpApiDecodeError"
-                }
-              }
-            }
-          },
-          "413": {
-            "description": "an instance of GlobalError",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/GlobalError"
-                }
-              }
-            }
-          },
-          "418": {
-            "description": "an instance of GroupError"
-          }
-        }
-      }
     }
   },
   "tags": [
     {
-      "name": "Users API"
+      "name": "groups"
     },
     {
-      "name": "groups"
+      "name": "Users API"
     }
   ],
   "components": {
     "schemas": {
-      "User": {
+      "Group": {
         "type": "object",
-        "required": ["id", "name", "createdAt"],
+        "required": ["id", "name"],
         "properties": {
           "id": {
             "type": "integer",
@@ -413,18 +413,11 @@
           },
           "name": {
             "type": "string"
-          },
-          "createdAt": {
-            "$ref": "#/components/schemas/DateTimeUtc"
           }
         },
         "additionalProperties": false,
-        "description": "an instance of User",
-        "title": "User"
-      },
-      "DateTimeUtc": {
-        "description": "a string that will be parsed into a DateTime.Utc",
-        "type": "string"
+        "description": "an instance of Group",
+        "title": "Group"
       },
       "NumberFromString": {
         "type": "string",
@@ -483,18 +476,6 @@
         "description": "The request did not match the expected schema",
         "title": "HttpApiDecodeError"
       },
-      "UserError": {
-        "type": "object",
-        "required": ["_tag"],
-        "properties": {
-          "_tag": {
-            "enum": ["UserError"]
-          }
-        },
-        "additionalProperties": false,
-        "description": "an instance of UserError",
-        "title": "UserError"
-      },
       "GlobalError": {
         "type": "object",
         "required": ["_tag"],
@@ -507,6 +488,42 @@
         "description": "an instance of GlobalError",
         "title": "GlobalError"
       },
+      "User": {
+        "type": "object",
+        "required": ["id", "name", "createdAt"],
+        "properties": {
+          "id": {
+            "type": "integer",
+            "description": "an integer",
+            "title": "Int"
+          },
+          "name": {
+            "type": "string"
+          },
+          "createdAt": {
+            "$ref": "#/components/schemas/DateTimeUtc"
+          }
+        },
+        "additionalProperties": false,
+        "description": "an instance of User",
+        "title": "User"
+      },
+      "DateTimeUtc": {
+        "description": "a string that will be parsed into a DateTime.Utc",
+        "type": "string"
+      },
+      "UserError": {
+        "type": "object",
+        "required": ["_tag"],
+        "properties": {
+          "_tag": {
+            "enum": ["UserError"]
+          }
+        },
+        "additionalProperties": false,
+        "description": "an instance of UserError",
+        "title": "UserError"
+      },
       "NoStatusError": {
         "type": "object",
         "required": ["_tag"],
@@ -518,23 +535,6 @@
         "additionalProperties": false,
         "description": "an instance of NoStatusError",
         "title": "NoStatusError"
-      },
-      "Group": {
-        "type": "object",
-        "required": ["id", "name"],
-        "properties": {
-          "id": {
-            "type": "integer",
-            "description": "an integer",
-            "title": "Int"
-          },
-          "name": {
-            "type": "string"
-          }
-        },
-        "additionalProperties": false,
-        "description": "an instance of Group",
-        "title": "Group"
       }
     },
     "securitySchemes": {
